--- a/style.css
+++ b/style.css
@@ -36,11 +36,12 @@ header {
     background: red;
     min-height: calc(100vh - 150px);
     width: 100%;
-    
 }
 
 #header-text {
   margin-top: 25vh;
+  width: 400px;
+  margin: 30vh auto;
   text-align: center;
 }
 
