--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ header {
 
 #header-text p {
   font-size: 1.5rem;
+  padding: 10px 0 0 0;
 }
 
 main {
@@ -62,10 +63,59 @@ main {
 .text-container {
   height: 40vh;
   width: 100%;
+  background: lightskyblue;
+}
+
+.text-content {
+  padding: 45px;
+  margin-left: 15vw;
+}
+
+.text-content h2 {
+  font-size: 2.2rem;
+  padding: 10px;
+}
+
+.text-content p {
+  font-size: 1.2rem;
+  padding: 10px;
+  margin-right: 40vw;
+}
+
+.content-boxes {
+  width: 100%;
+  height: 40vh;
+  background: lightcoral;
+  display: grid;
+    grid-gap: 30px;
+    grid-template-areas: 
+    'box-content-1 box-content-2 box-content-3';
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.box-content {
+  margin: 40px;
+}
+
+.box-content-1 {
+  grid-area: box-content-1;
+  background: lightsalmon;
+}
+
+.box-content-2 {
+  grid-area: box-content-2;
+  background: lightgrey;
+}
+
+.box-content-3 {
+  grid-area: box-content-3;
+  background: lightseagreen;
 }
 
 footer {
     background: green;
+    width: 100%;
+    height: 20vh;
 }
 
 
