--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    overflow: auto;
 }
 
 
@@ -12,7 +13,8 @@
     right: 35px;
     top: 35px;
     cursor: pointer;
-    transition: all 0.5s ease-out; }
+    transition: all 0.5s ease-out;
+    overflow: hidden; }
     .hamburger-menu .btn-line {
       width: 28px;
       height: 3px;
@@ -28,8 +30,86 @@
       .hamburger-menu.close .btn-line:nth-child(3) {
         transform: rotate(-45deg) translate(7px, -6px); }
 
+/* NAV-MENU-Overlay*/
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+}
+
+.menu.show {
+  visibility: visible;
+}
+
+.menu-nav {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  float: left;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background: #373737;
+  list-style: none;
+  transform: translate3d(0, -100%, 0);
+  transition: all 0.5s ease-out;
+}
+
+.menu-nav.show {
+  transform: translate3d(0, 0, 0);
+}
+
+.menu .nav-item {
+  transform: translate3d(600px, 0, 0);
+  transition: all 0.5s ease-out;
+  margin-bottom: 30px;
+}
+
+.menu .nav-item.show {
+  transform: translate3d(0, 0, 0);
+}
+
+.menu .nav-item.current > a {
+  color: darkmagenta;
+}
+
+.menu .nav-link {
+  display: inline-block;
+  position: relative;
+  font-size: 70px;
+  text-transform: uppercase;
+  padding: 1rem 0;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.5s ease-out;
+}
+
+.menu .nav-link:hover {
+  color: darkmagenta;
+}
+
+.nav-intem:nth-child(1) {
+  transition-delay: 0.1s;
+}
+
+.nav-intem:nth-child(2) {
+  transition-delay: 0.2s;
+}
+
+.nav-intem:nth-child(3) {
+  transition-delay: 0.3s;
+}
+
+.nav-intem:nth-child(4) {
+  transition-delay: 0.4s;
+}
+
 body {
-    background: pink;
+    background: yellow;
 }
 
 header {
@@ -64,6 +144,7 @@ main {
   height: 40vh;
   width: 100%;
   background: lightskyblue;
+  overflow: hidden;
 }
 
 .text-content {
