--- a/style.css
+++ b/style.css
@@ -122,13 +122,16 @@ header {
 
 #header-text {
   margin-top: 25vh;
-  width: 400px;
+  width: 500px;
+  color: white;
   margin: 30vh auto;
   text-align: center;
 }
 
 #header-text h1 {
   font-size: 3.5rem;
+  font-family: 'Kaushan Script', cursive;
+  letter-spacing: 3px;
   border-bottom: solid 2px white;
   border-bottom-width: 100%;
 }
@@ -136,6 +139,7 @@ header {
 #header-text p {
   font-size: 1.5rem;
   padding: 10px 0 0 0;
+  font-family: 'Oswald', sans-serif;
 }
 
 main {
@@ -150,6 +154,7 @@ main {
 }
 
 .text-content {
+  font-family: 'Oswald', sans-serif;
   padding: 45px;
   margin-left: 15vw;
 }
@@ -198,6 +203,25 @@ main {
 .box-content:hover .overlay {
   opacity: 1;
 }
+
+.text {
+  font-family: 'Oswald', sans-serif;
+  color: whitesmoke;
+}
+
+.text h3 {
+  font-size: 1.8rem;
+  margin: 30px 30px 0px;
+  padding: 10px;
+}
+
+.text p {
+  font-size: 1.2rem;
+  margin-left: 30px;
+  margin-right: 25px;
+  padding: 10px;
+}
+
 
 .box-content-1 {
   grid-area: box-content-1;
