fixed responsiveness on about and contact
added different headers

--- a/style.css
+++ b/style.css
@@ -144,10 +144,10 @@ header {
 
 /*ABOUT HEADER*/
 #header-about {
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/img/Siluette\ Pariserviken.jpg) no-repeat center center fixed;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/img/about-header.jpg) 75% 25%;
   background-size: cover;
   background-attachment: fixed;
-  min-height: 40vh;
+  min-height: 50vh;
   width: 100%;
 }
 #header-text-about {
@@ -179,10 +179,10 @@ header {
 
 /*CONTACT HEADER*/
 #header-contact {
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/img/Siluette\ Pariserviken.jpg) no-repeat center center fixed;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/img/contact-header.jpg) no-repeat center center fixed;
   background-size: cover;
   background-attachment: fixed;
-  min-height: 40vh;
+  min-height: 50vh;
   width: 100%;
 }
 
@@ -216,7 +216,7 @@ header {
 
 /*MAIN CONTENT*/
 .text-container {
-  height: 40vh;
+  min-height: 40vh;
   width: 100%;
   background: white;
   overflow: hidden;
@@ -313,70 +313,9 @@ header {
 }
 
 /*MAIN CONTENT ABOUT*/
-#text-container-about {
-  width: 100%;
-  display: grid;
-  grid-template-areas: 
-  'about-content-1 about-content-1 about-content-1 about-content-2 about-content-2';
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.text-container-content-about {
-
-}
-
-.about-content-1 {
-  grid-area: about-content-1;
-}
-
-.about-content-2 {
-  grid-area: about-content-2;
-}
-
-.text-container-content-about {
-  font-family: 'Oswald', sans-serif;
-  height: 40vh;
-  width: 100%;
-  background: white;
-  overflow: hidden;
-}
-
-.about-content-1 {
-  padding: 30px;
-  margin-left: 10vw;
-}
-
-.about-content-1 p{
-  margin-right: 250px;
-}
-
-.text-container-content-about h2 {
-  font-size: 2.2rem;
-  padding: 10px;
-}
-
-.text-container-content-about p {
-  font-size: 1.2rem;
-  padding: 10px;
-}
-
-.about-content-2 img {
-  width: auto;
-  height: 80%;
-  margin: 30px;
-  filter: grayscale(30%);
-  background: center;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 3px #464646;
-  border: 1px solid rgba(245, 245, 245, 0.603);
-}
 
 
 /*MAIN CONTENT CONTACT*/
-.contact {
-  
-}
-
 .contact p a {
   text-decoration: none;
   color: #3D3833;
@@ -462,7 +401,7 @@ footer a:hover {
 
 @media screen and (max-width: 1024px) {
   .text-container {
-    height: 25vh;
+    min-height: 25vh;
     width: 100%;
     background: white;
     overflow: auto;
@@ -483,7 +422,7 @@ footer a:hover {
 
 @media screen and (max-width: 768px) {
   .text-container {
-    height: 35vh;
+    min-height: 35vh;
     width: 100%;
     background: white;
     overflow: auto;
@@ -549,7 +488,7 @@ footer a:hover {
   
   
   .text-container {
-    min-height: 55vh;
+    min-height: 35vh;
     width: 100%;
     background: white;
     overflow: auto;
