Maybe fix header iphone 6

--- a/style.css
+++ b/style.css
@@ -587,5 +587,14 @@ footer a:hover {
   }
 }
 
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+     header {
+       min-width: fit-content;
+     }
+}
+
 
 
