--- a/style.css
+++ b/style.css
@@ -592,11 +592,11 @@ footer a:hover {
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
      header {
-       min-width: fit-content;
        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/sunset.png) no-repeat center center fixed;
        background-size: cover;
        background-attachment: fixed;
        min-height: calc(100vh - 150px);
+       width: 100%;
      }
      
 }
