--- a/style.css
+++ b/style.css
@@ -601,7 +601,7 @@ footer a:hover {
 
      #header-text {
       margin-top: 25vh;
-      width: 300px;
+      width: 100%;
       color: white;
       margin: 30vh auto;
       text-align: center;
