--- a/style.css
+++ b/style.css
@@ -611,9 +611,10 @@ footer a:hover {
     }
     
     #header-text h1 {
-      font-size: 2.2rem;
+      font-size: 2.5rem;
+      font-weight: 400;
       font-family: 'Kaushan Script', cursive;
-      letter-spacing: 3px;
+      letter-spacing: 2px;
       border-bottom: solid 2px white;
       border-bottom-width: 100%;
     }
@@ -622,7 +623,7 @@ footer a:hover {
       font-size: 0.8rem;
       font-weight: 400;
       text-transform: uppercase;
-      letter-spacing: 0.225rem;
+      letter-spacing: 0.2rem;
       padding: 10px 0 0 0;
       font-family: 'Source Sans Pro', Helvetica, sans-serif;
     }
