--- a/style.css
+++ b/style.css
@@ -441,8 +441,9 @@ footer a:hover {
 
   .content-boxes {
     width: 100%;
-    height: 100vh;
+    min-height: 900px;
     background: #FFC787;
+    overflow: hidden;
     display: grid;
       grid-template-areas: 
       'box-content-1'
@@ -456,6 +457,13 @@ footer a:hover {
     border-radius: 10px;
     box-shadow: 0px 0px 10px 3px #464646;
     border: 1px solid rgba(245, 245, 245, 0.603);
+    min-height: 250px;
+    min-width: 300px;
+    overflow: hidden;
+  }
+
+  footer {
+    min-height: 200px;
   }
 }
 
@@ -511,7 +519,7 @@ footer a:hover {
   }
 
   .content-boxes {
-    width: 100%;
+    min-width: 0px;
     height: 100vh;
     background: #FFC787;
     display: grid;
@@ -527,6 +535,7 @@ footer a:hover {
     border-radius: 10px;
     box-shadow: 0px 0px 10px 3px #464646;
     border: 1px solid rgba(245, 245, 245, 0.603);
+    min-width: 150px;
   }
 
   .text h3 {
@@ -545,7 +554,7 @@ footer a:hover {
   footer {
     background: #3D3833;
     width: 100%;
-    height: 40vh;
+    min-height: 45vh;
     display: grid;
     grid-template-areas: 
     'footer-content-1'
@@ -562,6 +571,7 @@ footer a:hover {
   font-family: 'Oswald', serif;
   padding: 5px;
   margin: 0;
+  overflow: hidden;
   }
 
   .footer-content-1 {
@@ -598,9 +608,6 @@ footer a:hover {
        -o-background-size: cover;
        background-size: cover;
        background-attachment: initial;
-       /*
-       background-attachment: fixed;
-       */
        min-height: calc(100vh - 150px);
        width: 100%;
      }
