--- a/style.css
+++ b/style.css
@@ -420,6 +420,7 @@ footer a:hover {
 }
 
 @media screen and (max-width: 768px) {
+
   .text-container {
     min-height: 35vh;
     width: 100%;
@@ -601,6 +602,11 @@ footer a:hover {
   and (min-device-width: 375px) 
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
+
+    .menu-nav {
+      height: 100%;
+    } 
+
      header {
        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/sunset.png) no-repeat center center fixed;
        -webkit-background-size: cover;
